--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "rescripts eject"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.34.0",
     "match-sorter": "^4.0.1",
     "namor": "^1.1.2",
     "react": "^16.8.6",
